# libmm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  TODO  docs.cmake  version.cmake
.github/workflows/: unit-tests.yml
cmake/: mm_functions.cmake
docs/: CMakeLists.txt  Doxyfile.in
libmm/: Makefile
libmm/include/libmm/: co.h  common.h  container.h  list.h  random.h  rbtree.h  unit.h  vector.h
libmm/src/: deque.c  random.c  vector.c
mm/: CMakeLists.txt  alloc.h.in  config.h.in  mmConfig.cmake.in  old.txt
mm/include/libmm/: common.h  config.h  random.h  unit.h  vector.h
mm/include/mm/: assert.h  bit.h  cmp.h  co.h  common.h  config.h  endian.h  ilist.h  io.h  irbtree.h  list.h  log.h  macro.h  random.h  rbtree.h  ref.h  sbf.h  sleep.h  time.h  unicode.h  unit.h  vec.h  vector.h
mm/src/: cmp.c  io.c  log.c  random.c  rbtree.c  sbf.c  time.c  unicode.c  vec.c  vector.c
unit/: CMakeLists.txt
unit-test/: Makefile
unit-test/src/: main.c  random.c
unit/src/: bit.c  co.c  main.c  random.c  ref.c  vector.c
